pid file (not sure why the wrapper doesnt create one by default)
Monotone-Parent: 740b00f9beea152b17d46c5c8ba587e186e1d03c
Monotone-Revision: 2dbed79640b84daacf857dd6acdbf7480b79af15

Monotone-Author: jrandom
Monotone-Date: 2004-09-01T07:53:03
Monotone-Branch: i2p.i2p

--- a/installer/resources/wrapper.conf
+++ b/installer/resources/wrapper.conf
@@ -105,6 +105,8 @@ wrapper.jvm_exit.timeout=30
 # as any time that the OS clock changes
 wrapper.use_system_time=false
 
+wrapper.java.pidfile=router.pid
+
 #********************************************************************
 # Wrapper NT Service Properties
 #********************************************************************
