more PIDs (one for the JVM, one for the service) the i2prouter script has some kooky naming dependencies, and the stop doesnt seem to work right, but its got pid files now... :)
Monotone-Parent: 2dbed79640b84daacf857dd6acdbf7480b79af15
Monotone-Revision: 6b73c11122c209761b954c56545a17134fa919c7

Monotone-Author: jrandom
Monotone-Date: 2004-09-01T08:02:19
Monotone-Branch: i2p.i2p

--- a/installer/resources/wrapper.conf
+++ b/installer/resources/wrapper.conf
@@ -105,7 +105,11 @@ wrapper.jvm_exit.timeout=30
 # as any time that the OS clock changes
 wrapper.use_system_time=false
 
-wrapper.java.pidfile=router.pid
+# pid file for the JVM
+wrapper.java.pidfile=routerjvm.pid
+# pid file for the service monitoring the JVM
+# (needs to be named i2prouter since the i2prouter script looks for that)
+wrapper.pidfile=i2prouter.pid
 
 #********************************************************************
 # Wrapper NT Service Properties
