* corrected: unix service install scripts erroneously pointed to 'i2psvc' instead of 'i2prouter' * pid file naming fixed once and for all, using 'i2p.pid' ;-) ('i2prouter.pid' did not work)
Monotone-Parent: 3c6692ad1ab735156231386f506b9fa6f32db822
Monotone-Revision: e57026130e7a17c91f6ee78f5e6263dcd297183e

Monotone-Author: hypercubus
Monotone-Date: 2004-09-01T16:46:27
Monotone-Branch: i2p.i2p

--- a/installer/resources/wrapper.conf
+++ b/installer/resources/wrapper.conf
@@ -108,8 +108,15 @@ wrapper.use_system_time=false
 # pid file for the JVM
 wrapper.java.pidfile=routerjvm.pid
 # pid file for the service monitoring the JVM
-# (needs to be named i2prouter since the i2prouter script looks for that)
-wrapper.pidfile=i2prouter.pid
+#
+# From i2prouter:
+#
+#     PIDDIR="."
+#     APP_NAME="i2p"
+#     PIDFILE="$PIDDIR/$APP_NAME.pid"
+#
+# This means i2prouter looks for './i2p.pid'.
+wrapper.pidfile=i2p.pid
 
 #********************************************************************
 # Wrapper NT Service Properties
