within the installation, move readme.html to docs/readme.html
Monotone-Parent: 850a08113e127771971658890aea4cd327a72d0e
Monotone-Revision: c3f9fdbb6215664651893e2d432ee80ba749516e

Monotone-Author: jrandom
Monotone-Date: 2004-09-02T01:22:33
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -238,7 +238,8 @@
             <fileset dir="installer/lib/wrapper/win32/" />
         </copy>
         <copy file="hosts.txt" todir="pkg-temp/" />
-        <copy file="readme.html" todir="pkg-temp/" />
+        <mkdir dir="pkg-temp/docs" />
+        <copy file="readme.html" todir="pkg-temp/docs/" />
     </target>
     <target name="tarball" depends="preppkg">
         <tar compression="bzip2" destfile="i2p.tar.bz2">
