--- a/installer/resources/wrapper.conf
+++ b/installer/resources/wrapper.conf
@@ -59,7 +59,7 @@ wrapper.console.format=PM
 wrapper.console.loglevel=INFO
 
 # Log file to use for wrapper output logging.
-wrapper.logfile=logs/wrapper.log
+wrapper.logfile=wrapper.log
 
 # Format of output for the log file.  (See docs for formats)
 wrapper.logfile.format=LPTM
