the client tunnel settings are "tunnels.depthInbound", not "tunnel.depthInbound"
Monotone-Parent: 5ee89229b409d82355c64281a0007054c3a2de65
Monotone-Revision: 2662016a4e004182c9e5eb1f722f2daecab60f03

Monotone-Author: jrandom
Monotone-Date: 2004-09-02T07:07:33
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -7,8 +7,8 @@ tunnel.0.listenPort=4444
 tunnel.0.proxyList=squid.i2p,www1.squid.i2p
 tunnel.0.i2cpHost=localhost
 tunnel.0.i2cpPort=7654
-tunnel.0.option.tunnel.depthInbound=2
-tunnel.0.option.tunnel.numTunnels=2
+tunnel.0.option.tunnels.depthInbound=2
+tunnel.0.option.tunnels.numTunnels=2
 tunnel.0.startOnLoad=true
 
 # irc
@@ -20,8 +20,8 @@ tunnel.1.listenPort=6668
 tunnel.1.targetDestination=irc.duck.i2p
 tunnel.1.i2cpHost=localhost
 tunnel.1.i2cpPort=7654
-tunnel.1.option.tunnel.depthInbound=2
-tunnel.1.option.tunnel.numTunnels=2
+tunnel.1.option.tunnels.depthInbound=2
+tunnel.1.option.tunnels.numTunnels=2
 tunnel.1.startOnLoad=true
 
 # local eepserver
@@ -33,6 +33,6 @@ tunnel.1.startOnLoad=true
 #tunnel.2.privKeyFile=eepPriv.dat
 #tunnel.2.i2cpHost=localhost
 #tunnel.2.i2cpPort=7654
-#tunnel.2.option.tunnel.depthInbound=2
-#tunnel.2.option.tunnel.numTunnels=2
+#tunnel.2.option.tunnels.depthInbound=2
+#tunnel.2.option.tunnels.numTunnels=2
 #tunnel.2.startOnLoad=true
