* added www.i2p, dev.i2p, and cvs.i2p (pointing at www.i2p.net:80, dev.i2p.net:80, and cvs.i2p.net:2401, respectively) * default the i2ptunnel listen interface to 127.0.0.1, not 0.0.0.0 * add a client tunnel listening on port 2401 pointing at cvs.i2p (but *not* started by default)
Monotone-Parent: 7e4b7fc7dc83e0a92ce2f42d28e2dd53335f7ed4
Monotone-Revision: ec4f1da7d66cc72f43cbf475879aaaa641dc6504

Monotone-Author: jrandom
Monotone-Date: 2004-09-02T08:32:05
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -2,7 +2,7 @@
 tunnel.0.name=eepProxy
 tunnel.0.description=HTTP proxy for browsing eepsites and the web
 tunnel.0.type=httpclient
-tunnel.0.interface=0.0.0.0
+tunnel.0.interface=127.0.0.1
 tunnel.0.listenPort=4444
 tunnel.0.proxyList=squid.i2p,www1.squid.i2p
 tunnel.0.i2cpHost=localhost
@@ -15,7 +15,7 @@ tunnel.0.startOnLoad=true
 tunnel.1.name=ircProxy
 tunnel.1.description=IRC proxy to access the anonymous irc net
 tunnel.1.type=client
-tunnel.1.interface=0.0.0.0
+tunnel.1.interface=127.0.0.1
 tunnel.1.listenPort=6668
 tunnel.1.targetDestination=irc.duck.i2p
 tunnel.1.i2cpHost=localhost
@@ -24,15 +24,28 @@ tunnel.1.option.tunnels.depthInbound=2
 tunnel.1.option.tunnels.numTunnels=2
 tunnel.1.startOnLoad=true
 
+# I2P's cvs server
+tunnel.2.name=cvs.i2p
+tunnel.2.description=I2P CVS pserver
+tunnel.2.type=client
+tunnel.1.interface=127.0.0.1
+tunnel.1.listenPort=2401
+tunnel.1.targetDestination=cvs.i2p
+tunnel.1.i2cpHost=localhost
+tunnel.1.i2cpPort=7654
+tunnel.1.option.tunnels.depthInbound=2
+tunnel.1.option.tunnels.numTunnels=2
+tunnel.1.startOnLoad=false
+
 # local eepserver
-#tunnel.2.name=eepsite
-#tunnel.2.description=My eepsite
-#tunnel.2.type=server
-#tunnel.2.targetHost=localhost
-#tunnel.2.targetPort=8000
-#tunnel.2.privKeyFile=eepPriv.dat
-#tunnel.2.i2cpHost=localhost
-#tunnel.2.i2cpPort=7654
-#tunnel.2.option.tunnels.depthInbound=2
-#tunnel.2.option.tunnels.numTunnels=2
-#tunnel.2.startOnLoad=true
+#tunnel.3.name=eepsite
+#tunnel.3.description=My eepsite
+#tunnel.3.type=server
+#tunnel.3.targetHost=localhost
+#tunnel.3.targetPort=8000
+#tunnel.3.privKeyFile=eepPriv.dat
+#tunnel.3.i2cpHost=localhost
+#tunnel.3.i2cpPort=7654
+#tunnel.3.option.tunnels.depthInbound=2
+#tunnel.3.option.tunnels.numTunnels=2
+#tunnel.3.startOnLoad=true
