new history file and RouterVersion.BUILD (displayed on the web console and in the published stats) (see soon-to-be-posted email to the list about this stuff)
Monotone-Parent: 0bc7a2c90d5632a920358e140f6ccb712ae95deb
Monotone-Revision: b5e97b0240a11c7855b4a3f6cca6e972ce01892c

Monotone-Author: jrandom
Monotone-Date: 2004-09-02T20:00:28
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -239,6 +239,7 @@
         </copy>
         <copy file="hosts.txt" todir="pkg-temp/" />
         <copy file="install-headless.txt" todir="pkg-temp/" />
+        <copy file="history.txt" todir="pkg-temp/" />
         <mkdir dir="pkg-temp/docs" />
         <copy file="readme.html" todir="pkg-temp/docs/" />
     </target>
