--- a/build.xml
+++ b/build.xml
@@ -3,67 +3,14 @@
     
     <target name="all" >
         <echo message="Useful targets: " />
-        <echo message="  build:     build existing code into ./build/, but dont clean" />
-        <echo message="  javadoc:   generate javadoc for the entire project into ./build/javadoc" />
-        <echo message="  clean:     clean up the ./build/ dir" />
+        <echo message="  dist:      distclean then package everything up (installer, clean tarball, update tarball)" />
+        <echo message="  installer: build the GUI installer" />
+        <echo message="  tarball:   tar the full install into i2p.tar.bz2 (extracts to build a new clean install)" />
+        <echo message="  updater:   tar the built i2p specific files into an i2pupdate.tar.bz2 (extracts safely over existing installs)" />
         <echo message="  distclean: clean up all derived files" />
-        <echo message="  dist:      distclean, then build and javadoc (including the web app and associated libs)" />
-        <echo message="  prepGUI:   pull the LGPL and APL code for JFreeChart that we use in the GUIs" />
-        <echo message="  buildGUI:  build the heartbeat and netmonitor GUIs (must have run prepGUI already)" />
-        <echo message="  pkg:       make the tarball and installer jar (depends upon preppkg)" />
-        <echo message="  pkgclean:  delete the ./pkg-temp/ dir, tarball and installer jar" />
-        <echo message="  preppkg:   gather built files for tarball and installer" />
-        <echo message="  tarball:   tar the built files and compress with bz2 (depends upon preppkg)" />
-        <echo message="  installer: build the GUI installer (depends upon preppkg)" />
+        <echo message="  javadoc:   generate javadoc for the entire project into ./build/javadoc" />
     </target>
     <target name="dist" depends="distclean, pkg, javadoc">
-    </target>
-    <target name="olddist" depends="distclean, build, buildWEB, javadoc">
-        <delete dir="build/lib" />
-        <delete dir="build/webapps" />
-        <mkdir dir="build/lib" />
-
-        <copy file="core/java/build/i2p.jar" todir="build/lib" />
-        <copy file="router/java/build/router.jar" todir="build/lib" />
-        <copy file="apps/ministreaming/java/build/mstreaming.jar" todir="build/lib" />
-        <copy file="apps/i2ptunnel/java/build/i2ptunnel.jar" todir="build/lib" />
-        <copy file="apps/sam/java/build/sam.jar" todir="build/lib" />
-        <copy file="apps/heartbeat/java/build/heartbeat.jar" todir="build/lib" />
-        <copy file="apps/netmonitor/java/build/netmonitor.jar" todir="build/lib" />
-        <copy file="installer/java/build/fetchseeds.jar" todir="build/lib" />
-        <tar compression="bzip2" destfile="build/lib.tar.bz2">
-            <tarfileset dir="build" includes="lib/*" />
-        </tar>
-
-        <delete dir="build/lib" />
-        <delete dir="build/webapps" />
-        <mkdir dir="build/lib" />
-        <mkdir dir="build/webapps" />
-
-        <copy file="apps/i2ptunnel/java/build/i2ptunnel.war" todir="build/webapps" />
-        <copy file="apps/routerconsole/java/build/routerconsole.war" todir="build/webapps" />
-        <copy file="apps/routerconsole/java/build/routerconsole.jar" todir="build/lib" />
-        <tar compression="bzip2" destfile="build/webapps.tar.bz2">
-            <tarfileset dir="build" includes="lib/* webapps/*" />
-        </tar>
-
-        <delete dir="build/lib" />
-        <delete dir="build/webapps" />
-        <mkdir dir="build/lib" />
-
-        <copy file="apps/jetty/jettylib/org.mortbay.jetty.jar" todir="build/lib" />
-        <copy file="apps/jetty/jettylib/org.mortbay.jetty-jdk1.2.jar" todir="build/lib" />
-        <copy file="apps/jetty/jettylib/ant.jar" todir="build/lib" />
-        <copy file="apps/jetty/jettylib/jasper-compiler.jar" todir="build/lib" />
-        <copy file="apps/jetty/jettylib/jasper-runtime.jar" todir="build/lib" />
-        <copy file="apps/jetty/jettylib/jnet.jar" todir="build/lib" />
-        <copy file="apps/jetty/jettylib/xercesImpl.jar" todir="build/lib" />
-        <copy file="apps/jetty/jettylib/xml-apis.jar" todir="build/lib" />
-        <copy file="apps/jetty/jettylib/javax.servlet.jar" todir="build/lib" />
-        <tar compression="bzip2" destfile="build/weblib.tar.bz2">
-            <tarfileset dir="build" includes="lib/*" />
-        </tar>
-        
     </target>
     <target name="build" depends="builddep, jar, buildWEB" />
     <target name="buildclean" depends="distclean, build" />
@@ -78,7 +25,6 @@
         <ant dir="apps/netmonitor/java/" target="jar" />
         <ant dir="apps/systray/java/" target="jar" />
         <ant dir="apps/routerconsole/java/" target="jar" />
-        <ant dir="installer/java/" target="jar" />
     </target>
     <target name="buildWEB">
         <ant dir="apps/jetty" target="fetchJettylib" />
@@ -106,22 +52,39 @@
         <copy file="apps/heartbeat/java/build/heartbeat.jar" todir="build/" />
         <copy file="apps/netmonitor/java/build/netmonitor.jar" todir="build/" />
         <copy file="apps/systray/java/build/systray.jar" todir="build/" />
-        <copy file="installer/java/build/install.jar" todir="build/" />
-        <copy file="installer/java/build/guiinstall.jar" todir="build/" />
-        <copy file="installer/java/build/fetchseeds.jar" todir="build/" />
         <copy file="installer/lib/jbigi/jbigi.jar" todir="build" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
         <mkdir dir="./build/javadoc" />
         <javadoc 
-            sourcepath="core/java/src:core/java/test:router/java/src:router/java/test:apps/ministreaming/java/src:apps/i2ptunnel/java/src:apps/httptunnel/java/src:apps/systray/java/src:apps/routerconsole/java/src" 
-            classpath="apps/jetty/jettylib/org.mortbay.jetty.jar:apps/systray/java/lib/systray4j.jar:installer/lib/wrapper/win32/wrapper.jar" 
             destdir="./build/javadoc" 
             packagenames="*" 
             use="true" 
+            group="SDK net.i2p:net.i2p.*:net.i2p.client:net.i2p.client.*:freenet.support.CPUInformation,
+                   Streaming net.i2p.client.streaming,
+                   RouterConsole net.i2p.router.web,
+                   Router net.i2p.router:net.i2p.router.*:net.i2p.data.i2np,
+                   Systray net.i2p.apps.systray,
+                   I2PTunnel net.i2p.i2ptunnel:net.i2p.i2ptunnel.*"
             splitindex="true" 
-            windowtitle="I2P" />
+            windowtitle="I2P">
+            <sourcepath>
+                <pathelement location="core/java/src" />
+                <pathelement location="core/java/test" />
+                <pathelement location="router/java/src" />
+                <pathelement location="router/java/test" />
+                <pathelement location="apps/ministreaming/java/src" />
+                <pathelement location="apps/i2ptunnel/java/src" />
+                <pathelement location="apps/systray/java/src" />
+                <pathelement location="apps/routerconsole/java/src" />
+            </sourcepath>
+            <classpath>
+                <pathelement location="apps/jetty/jettylib/org.mortbay.jetty.jar" />
+                <pathelement location="apps/systray/java/lib/systray4j.jar" />
+                <pathelement location="installer/lib/wrapper/win32/wrapper.jar" />
+            </classpath>
+        </javadoc>
     </target>
     <target name="clean" depends="pkgclean" >
         <delete dir="./build" />
@@ -176,14 +139,15 @@
         <echo message="To run the netmonitor GUI: java -cp jfreechart-0.9.17.jar:log4j-1.2.8.jar:jcommon-0.9.2.jar -jar netviewer.jar" />
         <echo message="To run the heartbeat GUI: java -cp jfreechart-0.9.17.jar:log4j-1.2.8.jar:jcommon-0.9.2.jar -jar heartbeatGUI.jar" />
     </target>
-    <target name="pkg" depends="tarball, installer" />
+    <target name="pkg" depends="updater, tarball, installer" />
     <target name="pkgclean">
         <delete dir="pkg-temp" />
         <delete>
-            <fileset dir="." includes="i2p.tar.bz2 install.jar" />
+            <fileset dir="." includes="i2p.tar.bz2 install.jar i2pupdate.tar.bz2" />
         </delete>
     </target>
     <target name="preppkg" depends="build">
+        <delete dir="pkg-temp" />
         <copy file="build/ant.jar" todir="pkg-temp/lib/" />
         <copy file="build/heartbeat.jar" todir="pkg-temp/lib/" />
         <copy file="build/i2p.jar" todir="pkg-temp/lib/" />
@@ -245,6 +209,23 @@
     </target>
     <target name="tarball" depends="preppkg">
         <tar compression="bzip2" destfile="i2p.tar.bz2">
+            <tarfileset dir="pkg-temp" includes="**/*" prefix="i2p" />
+        </tar>
+    </target>
+    <target name="updater" depends="build">
+        <delete dir="pkg-temp" />
+        <copy file="build/heartbeat.jar" todir="pkg-temp/lib/" />
+        <copy file="build/i2p.jar" todir="pkg-temp/lib/" />
+        <copy file="build/i2ptunnel.jar" todir="pkg-temp/lib/" />
+        <copy file="build/mstreaming.jar" todir="pkg-temp/lib/" />
+        <copy file="build/router.jar" todir="pkg-temp/lib/" />
+        <copy file="build/routerconsole.jar" todir="pkg-temp/lib/" />
+        <copy file="build/sam.jar" todir="pkg-temp/lib/" />
+        <copy file="build/systray.jar" todir="pkg-temp/lib" />
+        <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
+        <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
+        <copy file="history.txt" todir="pkg-temp/" />
+        <tar compression="bzip2" destfile="i2pupdate.tar.bz2">
             <tarfileset dir="pkg-temp" includes="**/*" prefix="i2p" />
         </tar>
     </target>
