2004-09-03  hypercubus     * Bugfix: Installer launches postinstall.bat on WinNT/2K properly.     * Temporarily removed install_i2p_service_unix and       uninstall_i2p_service_unix from distribution packages.     * postinstall.bat/postinstall.sh cleans installation directory of all files       not applicable to the host OS.
Monotone-Parent: 11d8e8384400d5a6000ae3daac03e96912d71619
Monotone-Revision: 030e3add5522a109ca4d667ae596f9b673e05da5

Monotone-Author: hypercubus
Monotone-Date: 2004-09-03T16:52:27
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -177,13 +177,13 @@
         <copy file="installer/resources/i2prouter" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter.bat" todir="pkg-temp/" />
         <copy file="installer/resources/i2ptunnel.config" todir="pkg-temp/" />
-        <copy file="installer/resources/install_i2p_service_unix" todir="pkg-temp/" />
+        <!-- <copy file="installer/resources/install_i2p_service_unix" todir="pkg-temp/" /> -->
         <copy file="installer/resources/install_i2p_service_winnt.bat" todir="pkg-temp/" />
         <copy file="installer/resources/osid" todir="pkg-temp/" />
         <copy file="installer/resources/postinstall.bat" todir="pkg-temp/" />
         <copy file="installer/resources/postinstall.sh" todir="pkg-temp/" />
         <copy file="installer/resources/systray.config" todir="pkg-temp/" />
-        <copy file="installer/resources/uninstall_i2p_service_unix" todir="pkg-temp/" />
+        <!-- <copy file="installer/resources/uninstall_i2p_service_unix" todir="pkg-temp/" /> -->
         <copy file="installer/resources/uninstall_i2p_service_winnt.bat" todir="pkg-temp/" />
         <copy file="installer/resources/wrapper.conf" todir="pkg-temp/" />
         <copy todir="pkg-temp/lib/wrapper/freebsd/">
