2004-09-03  jrandom     * Updated default wrapper.config to deal with the hard restart option     * Include the history.txt in the /help.jsp page     * HTML updates (wrapper.log, and no more unix scripts)     * Updated VERSION constants to 0.4
Monotone-Parent: 030e3add5522a109ca4d667ae596f9b673e05da5
Monotone-Revision: 721ac523d71eb6201c52da4315b44b177182ac5c

Monotone-Author: jrandom
Monotone-Date: 2004-09-03T19:46:07
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_4

--- a/installer/resources/wrapper.conf
+++ b/installer/resources/wrapper.conf
@@ -90,6 +90,8 @@ wrapper.on_exit.10=RESTART
 wrapper.on_exit.2=SHUTDOWN
 # hard shutdown
 wrapper.on_exit.3=SHUTDOWN
+# hard restart
+wrapper.on_exit.4=RESTART
 
 # the router may take a few seconds to save state, etc
 wrapper.jvm_exit.timeout=60
