--- a/installer/resources/wrapper.conf
+++ b/installer/resources/wrapper.conf
@@ -100,7 +100,7 @@ wrapper.jvm_exit.timeout=60
 wrapper.jvm_exit.timeout=30
 
 # give the OS 30s to clear all the old sockets / etc before restarting
-#wrapper.restart.delay=30
+wrapper.restart.delay=60
 
 # use the wrapper's internal timer thread.  otherwise this would 
 # force a restart of the router during daylight savings time as well
