2004-09-07  jrandom     * Write the native libraries to the current directory when they are loaded       from a resource, and load them from that file on subsequent runs (in       turn, we no longer *cough* delete the running libraries...)     * Added support for a graceful restart.     * Added new pseudo-shutdown hook specific to the router, allowing       applications to request tasks to be run when the router shuts down.  We       use this for integration with the service manager, since otherwise a       graceful shutdown would cause a timeout, followed by a forced hard       shutdown.     * Handle a bug in the SimpleTimer with requeued tasks.     * Made the capacity calculator a bit more dynamic by not outright ignoring       the otherwise valid capacity data for a period with a single rejected       tunnel (except for the 10 minute period).  In addition, peers with an       equal capacity are ordered by speed rather than by their hashes.     * Cleaned up the SimpleTimer, addressing some threading and synchronization       issues.     * When an I2PTunnel client or httpclient is explicitly closed, destroy the       associated session (unless there are other clients using it), and deal       with a closed session when starting a new I2PTunnel instance.     * Refactoring and logging.
Monotone-Parent: 5021de619f98d7cede2a7cdfbef703918f2bdfe6
Monotone-Revision: 0a1c87da5220d63fe83e5fc259d353158bb1d887

Monotone-Author: jrandom
Monotone-Date: 2004-09-07T07:17:02
Monotone-Branch: i2p.i2p

--- a/installer/resources/wrapper.conf
+++ b/installer/resources/wrapper.conf
@@ -92,9 +92,11 @@ wrapper.on_exit.2=SHUTDOWN
 wrapper.on_exit.3=SHUTDOWN
 # hard restart
 wrapper.on_exit.4=RESTART
+# hard restart
+wrapper.on_exit.5=RESTART
 
 # the router may take a few seconds to save state, etc
-wrapper.jvm_exit.timeout=60
+wrapper.jvm_exit.timeout=10
 
 # give the OS 60s to clear all the old sockets / etc before restarting
 wrapper.restart.delay=60
