2004-09-07  jrandom     * Disable the timestamper by default for all applications except the router       (enable via -Dtime.disabled=false)     * Simplify the retrieval of the full destination with text based browsers.     * Bundle the updated wrapper.config and hosts.txt in the i2pupdate.tar.bz2
Monotone-Parent: e24aa4d765b233e5c37c6d27f452b0a417ba05e4
Monotone-Revision: 463515cfd23e0f0d9c9025e0ce1edd5dc9e4dfa3

Monotone-Author: jrandom
Monotone-Date: 2004-09-07T09:49:02
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -227,6 +227,8 @@
         <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="history.txt" todir="pkg-temp/" />
+        <copy file="hosts.txt" todir="pkg-temp/" />
+        <copy file="installer/resources/wrapper.config" todir="pkg-temp/" />        
         <tar compression="bzip2" destfile="i2pupdate.tar.bz2">
             <tarfileset dir="pkg-temp" includes="**/*" prefix="i2p" />
         </tar>
