fix the build (thanks duck)
Monotone-Parent: 463515cfd23e0f0d9c9025e0ce1edd5dc9e4dfa3
Monotone-Revision: 272e73a7f0b6b13a8cbba9cfdd622211a23726d6

Monotone-Author: jrandom
Monotone-Date: 2004-09-07T20:39:42
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -228,7 +228,7 @@
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="history.txt" todir="pkg-temp/" />
         <copy file="hosts.txt" todir="pkg-temp/" />
-        <copy file="installer/resources/wrapper.config" todir="pkg-temp/" />        
+        <copy file="installer/resources/wrapper.conf" todir="pkg-temp/" />        
         <tar compression="bzip2" destfile="i2pupdate.tar.bz2">
             <tarfileset dir="pkg-temp" includes="**/*" prefix="i2p" />
         </tar>
