--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -8,7 +8,7 @@ tunnel.0.proxyList=squid.i2p,www1.squid.i2p
 tunnel.0.i2cpHost=localhost
 tunnel.0.i2cpPort=7654
 tunnel.0.option.tunnels.depthInbound=2
-tunnel.0.option.tunnels.numTunnels=2
+tunnel.0.option.tunnels.numInbound=2
 tunnel.0.startOnLoad=true
 
 # irc
@@ -21,7 +21,7 @@ tunnel.1.targetDestination=irc.duck.i2p
 tunnel.1.i2cpHost=localhost
 tunnel.1.i2cpPort=7654
 tunnel.1.option.tunnels.depthInbound=2
-tunnel.1.option.tunnels.numTunnels=2
+tunnel.1.option.tunnels.numInbound=2
 tunnel.1.startOnLoad=true
 
 # I2P's cvs server
@@ -34,7 +34,7 @@ tunnel.2.targetDestination=cvs.i2p
 tunnel.2.i2cpHost=localhost
 tunnel.2.i2cpPort=7654
 tunnel.2.option.tunnels.depthInbound=2
-tunnel.2.option.tunnels.numTunnels=2
+tunnel.2.option.tunnels.numInbound=2
 tunnel.2.startOnLoad=false
 
 # local eepserver
@@ -47,5 +47,5 @@ tunnel.2.startOnLoad=false
 #tunnel.3.i2cpHost=localhost
 #tunnel.3.i2cpPort=7654
 #tunnel.3.option.tunnels.depthInbound=2
-#tunnel.3.option.tunnels.numTunnels=2
+#tunnel.3.option.tunnels.numInbound=2
 #tunnel.3.startOnLoad=true
