* Bugfix: Running the installer as a non-privileged user on Red Hat (and    hopefully any other affected *nix systems) now properly discards non-    essential directories after installation. * Support for Win9x in the installer and postinstall.bat. * Changed the name of the default installation directory on all platforms    from "I2P" to "i2p" in the installer. * Changed "wrapper.conf" to "wrapper.config" for naming consistency with the    other configuration files.
Monotone-Parent: 5b96b22700796f2cc59d0bbf62d3d5ceb3f44ce6
Monotone-Revision: 9ba1e961b64dfc2067f0f9e24d376b87e458f4f3

Monotone-Author: hypercubus
Monotone-Date: 2004-09-08T22:04:13
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -185,7 +185,7 @@
         <copy file="installer/resources/systray.config" todir="pkg-temp/" />
         <!-- <copy file="installer/resources/uninstall_i2p_service_unix" todir="pkg-temp/" /> -->
         <copy file="installer/resources/uninstall_i2p_service_winnt.bat" todir="pkg-temp/" />
-        <copy file="installer/resources/wrapper.conf" todir="pkg-temp/" />
+        <copy file="installer/resources/wrapper.config" todir="pkg-temp/" />
         <copy todir="pkg-temp/lib/wrapper/freebsd/">
             <fileset dir="installer/lib/wrapper/freebsd/" />
         </copy>
@@ -228,7 +228,7 @@
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="history.txt" todir="pkg-temp/" />
         <copy file="hosts.txt" todir="pkg-temp/" />
-        <copy file="installer/resources/wrapper.conf" todir="pkg-temp/" />        
+        <copy file="installer/resources/wrapper.config" todir="pkg-temp/" />        
         <tar compression="bzip2" destfile="i2pupdate.tar.bz2">
             <tarfileset dir="pkg-temp" includes="**/*" prefix="i2p" />
         </tar>
