(release in the next hour or so) 2004-09-08  jrandom     * Updated the "Active:" peer count to display the # of connections as well       as the number of recently active router identities.     * Implement some basic updating code - on startup, if there is a file named       "i2pupdate.zip" in the I2P installation directory, extract it, delete it,       then restart.     * Added an ugly little script to allow launching the router on win9x       machines without a dos box (using javaw to run a .bat file).     * Logging updates.     * Updated VERSION constants to 0.4.0.1
Monotone-Parent: f8f61e755c54376b6af1dffdcb9764e11949cd02
Monotone-Revision: 8e23dbfad60fbfe6a0bd2c4e831a829d22f44062

Monotone-Author: jrandom
Monotone-Date: 2004-09-09T02:26:42
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_4_0_1

--- a/build.xml
+++ b/build.xml
@@ -176,6 +176,7 @@
         <copy file="installer/resources/clients.config" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter.bat" todir="pkg-temp/" />
+        <copy file="installer/resources/i2prouter_win9x.bat" todir="pkg-temp/" />
         <copy file="installer/resources/i2ptunnel.config" todir="pkg-temp/" />
         <!-- <copy file="installer/resources/install_i2p_service_unix" todir="pkg-temp/" /> -->
         <copy file="installer/resources/install_i2p_service_winnt.bat" todir="pkg-temp/" />
@@ -228,10 +229,13 @@
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="history.txt" todir="pkg-temp/" />
         <copy file="hosts.txt" todir="pkg-temp/" />
-        <copy file="installer/resources/wrapper.config" todir="pkg-temp/" />        
-        <tar compression="bzip2" destfile="i2pupdate.tar.bz2">
-            <tarfileset dir="pkg-temp" includes="**/*" prefix="i2p" />
-        </tar>
+        <copy file="installer/resources/install_i2p_service_winnt.bat" todir="pkg-temp/" />
+        <copy file="installer/resources/uninstall_i2p_service_winnt.bat" todir="pkg-temp/" />
+        <copy file="installer/resources/i2prouter" todir="pkg-temp/" />
+        <copy file="installer/resources/i2prouter.bat" todir="pkg-temp/" />
+        <copy file="installer/resources/i2prouter_win9x.bat" todir="pkg-temp/" />
+        <copy file="installer/resources/wrapper.config" todir="pkg-temp/" />
+        <zip destfile="i2pupdate.zip" basedir="pkg-temp" />
     </target>
     <taskdef name="izpack" classpath="${basedir}/installer/lib/izpack/standalone-compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
     <target name="installer" depends="preppkg">
