2004-09-30  jrandom     * Bundle the configuration necessary to run an eepsite out of the box       with Jetty - simply edit ./eepsite/docroot/index.html and give people       the key listed on the I2PTunnel configuration page, and its up. plus minor bugfixes / refactoring / logging
Monotone-Parent: b832f865adf75436d2d1a1bd1656ac62b00b1312
Monotone-Revision: acd0516066ef9eb6424762e787fd4a6316515479

Monotone-Author: jrandom
Monotone-Date: 2004-09-30T06:57:22
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
         <echo message="  dist:      distclean then package everything up (installer, clean tarball, update tarball)" />
         <echo message="  installer: build the GUI installer" />
         <echo message="  tarball:   tar the full install into i2p.tar.bz2 (extracts to build a new clean install)" />
-        <echo message="  updater:   tar the built i2p specific files into an i2pupdate.tar.bz2 (extracts safely over existing installs)" />
+        <echo message="  updater:   tar the built i2p specific files into an i2pupdate.zip (extracts safely over existing installs)" />
         <echo message="  distclean: clean up all derived files" />
         <echo message="  javadoc:   generate javadoc for the entire project into ./build/javadoc" />
     </target>
@@ -143,7 +143,7 @@
     <target name="pkgclean">
         <delete dir="pkg-temp" />
         <delete>
-            <fileset dir="." includes="i2p.tar.bz2 install.jar i2pupdate.tar.bz2" />
+            <fileset dir="." includes="i2p.tar.bz2 install.jar i2pupdate.zip" />
         </delete>
     </target>
     <target name="preppkg" depends="build">
@@ -207,8 +207,12 @@
         <copy file="history.txt" todir="pkg-temp/" />
         <mkdir dir="pkg-temp/docs" />
         <copy file="readme.html" todir="pkg-temp/docs/" />
-        <mkdir dir="pkg-temp/work" />
-        <touch file="pkg-temp/work/ignore.this" />
+        <mkdir dir="pkg-temp/eepsite" />
+        <mkdir dir="pkg-temp/eepsite/webapps" />
+        <mkdir dir="pkg-temp/eepsite/logs" />
+        <mkdir dir="pkg-temp/eepsite/docroot" />
+        <copy file="installer/resources/eepsite_index.html" tofile="pkg-temp/eepsite/docroot/index.html" />
+        <copy file="installer/resources/jetty.xml" tofile="pkg-temp/eepsite/jetty.xml" />
     </target>
     <target name="tarball" depends="preppkg">
         <tar compression="bzip2" destfile="i2p.tar.bz2">
@@ -226,6 +230,12 @@
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="history.txt" todir="pkg-temp/" />
         <copy file="hosts.txt" todir="pkg-temp/" />
+        <mkdir dir="pkg-temp/eepsite" />
+        <mkdir dir="pkg-temp/eepsite/webapps" />
+        <mkdir dir="pkg-temp/eepsite/logs" />
+        <mkdir dir="pkg-temp/eepsite/docroot" />
+        <copy file="installer/resources/eepsite_index.html" tofile="pkg-temp/eepsite/docroot/index.html" />
+        <copy file="installer/resources/jetty.xml" tofile="pkg-temp/eepsite/jetty.xml" />
         <zip destfile="i2pupdate.zip" basedir="pkg-temp" />
     </target>
     <taskdef name="izpack" classpath="${basedir}/installer/lib/izpack/standalone-compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
