--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -13,3 +13,8 @@ clientApp.1.args=sam.keys 127.0.0.1 7656 i2cp.tcp.host=localhost i2cp.tcp.port=7
 clientApp.2.main=net.i2p.i2ptunnel.TunnelControllerGroup
 clientApp.2.name=Tunnels
 clientApp.2.args=i2ptunnel.config
+
+# run our own eepsite with a seperate jetty instance
+clientApp.3.main=org.mortbay.jetty.Server
+clientApp.3.name=eepsite
+clientApp.3.args=eepsite/jetty.xml
