--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -38,14 +38,14 @@ tunnel.2.option.tunnels.numInbound=2
 tunnel.2.startOnLoad=false
 
 # local eepserver
-#tunnel.3.name=eepsite
-#tunnel.3.description=My eepsite
-#tunnel.3.type=server
-#tunnel.3.targetHost=localhost
-#tunnel.3.targetPort=8000
-#tunnel.3.privKeyFile=eepPriv.dat
-#tunnel.3.i2cpHost=localhost
-#tunnel.3.i2cpPort=7654
-#tunnel.3.option.tunnels.depthInbound=2
-#tunnel.3.option.tunnels.numInbound=2
-#tunnel.3.startOnLoad=true
+tunnel.3.name=eepsite
+tunnel.3.description=My eepsite
+tunnel.3.type=server
+tunnel.3.targetHost=localhost
+tunnel.3.targetPort=7658
+tunnel.3.privKeyFile=eepsite/eepPriv.dat
+tunnel.3.i2cpHost=localhost
+tunnel.3.i2cpPort=7654
+tunnel.3.option.tunnels.depthInbound=2
+tunnel.3.option.tunnels.numInbound=2
+tunnel.3.startOnLoad=true
