--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -39,6 +39,7 @@ wrapper.java.library.path.2=lib
 
 # Java Additional Parameters
 wrapper.java.additional.1=-DloggerFilenameOverride=logs/log-router-@.txt
+wrapper.java.additional.2=-Dorg.mortbay.http.Version.paranoid=true
 
 # Initial Java Heap Size (in MB)
 #wrapper.java.initmemory=4
