--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -49,3 +49,42 @@ tunnel.3.i2cpPort=7654
 tunnel.3.option.tunnels.depthInbound=2
 tunnel.3.option.tunnels.numInbound=2
 tunnel.3.startOnLoad=true
+
+# postman's SMTP server - see www.postman.i2p
+tunnel.4.description=smtp server
+tunnel.4.i2cpHost=localhost
+tunnel.4.i2cpPort=7654
+tunnel.4.interface=127.0.0.1
+tunnel.4.listenPort=7659
+tunnel.4.name=smtp.postman.i2p
+tunnel.4.option.tunnels.depthInbound=2
+tunnel.4.option.tunnels.numInbound=2
+tunnel.4.startOnLoad=false
+tunnel.4.targetDestination=smtp.postman.i2p
+tunnel.4.type=client
+
+# postman's POP3 server - see www.postman.i2p
+tunnel.5.name=pop3.postman.i2p
+tunnel.5.description=pop3 server
+tunnel.5.i2cpHost=localhost
+tunnel.5.i2cpPort=7654
+tunnel.5.interface=127.0.0.1
+tunnel.5.listenPort=7660
+tunnel.5.option.tunnels.depthInbound=2
+tunnel.5.option.tunnels.numInbound=2
+tunnel.5.startOnLoad=false
+tunnel.5.targetDestination=pop.postman.i2p
+tunnel.5.type=client
+
+# another irc server, linked with irc.duck.i2p and IIP
+tunnel.6.description=irc.baffled.i2p
+tunnel.6.i2cpHost=localhost
+tunnel.6.i2cpPort=7654
+tunnel.6.interface=localhost
+tunnel.6.listenPort=7661
+tunnel.6.name=irc.baffled.i2p
+tunnel.6.option.tunnels.depthInbound=2
+tunnel.6.option.tunnels.numInbound=2
+tunnel.6.startOnLoad=false
+tunnel.6.targetDestination=irc.baffled.i2p
+tunnel.6.type=client
