make the updater clean things (thanks nickster\!)
Monotone-Parent: 1a7d823d4ef26c0a46133fddaf0d8edd15da9a61
Monotone-Revision: e981f91162dea6cf21c5e0f5d45c584d60b2189e

Monotone-Author: jrandom
Monotone-Date: 2004-11-04T08:31:11
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
         <echo message="  distclean: clean up all derived files" />
         <echo message="  javadoc:   generate javadoc for the entire project into ./build/javadoc" />
     </target>
-    <target name="dist" depends="distclean, pkg, javadoc">
+    <target name="dist" depends="pkg, javadoc">
     </target>
     <target name="build" depends="builddep, jar, buildWEB" />
     <target name="buildclean" depends="distclean, build" />
@@ -224,7 +224,7 @@
             <tarfileset dir="pkg-temp" includes="**/*" prefix="i2p" />
         </tar>
     </target>
-    <target name="updater" depends="build">
+    <target name="updater" depends="distclean, build">
         <delete dir="pkg-temp" />
         <copy file="build/i2p.jar" todir="pkg-temp/lib/" />
         <copy file="build/i2ptunnel.jar" todir="pkg-temp/lib/" />
