--- a/apps/sam/c/Makefile.common
+++ b/apps/sam/c/Makefile.common
@@ -21,5 +21,6 @@ libsam: $(OBJS)
 # Cleanup rules
 #
 
+# WTF doesn't this remove the .depend ?!?
 clean:
 	-$(RM) -f $(LIBDIR)/libsam.a $(OBJDIR)/*.o .depend
