--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -9,6 +9,7 @@ tunnel.0.i2cpHost=localhost
 tunnel.0.i2cpPort=7654
 tunnel.0.option.tunnels.depthInbound=2
 tunnel.0.option.tunnels.numInbound=2
+tunnel.0.option.i2p.streaming.connectDelay=1000
 tunnel.0.startOnLoad=true
 
 # irc
@@ -17,11 +18,12 @@ tunnel.1.description=IRC proxy to access the anonymous irc net
 tunnel.1.type=client
 tunnel.1.interface=127.0.0.1
 tunnel.1.listenPort=6668
-tunnel.1.targetDestination=irc.duck.i2p
+tunnel.1.targetDestination=irc.duck.i2p,irc.baffled.i2p
 tunnel.1.i2cpHost=localhost
 tunnel.1.i2cpPort=7654
 tunnel.1.option.tunnels.depthInbound=2
 tunnel.1.option.tunnels.numInbound=2
+tunnel.1.option.i2p.streaming.connectDelay=1000
 tunnel.1.startOnLoad=true
 
 # I2P's cvs server
@@ -59,6 +61,7 @@ tunnel.4.listenPort=7659
 tunnel.4.name=smtp.postman.i2p
 tunnel.4.option.tunnels.depthInbound=2
 tunnel.4.option.tunnels.numInbound=2
+tunnel.4.option.i2p.streaming.connectDelay=1000
 tunnel.4.startOnLoad=false
 tunnel.4.targetDestination=smtp.postman.i2p
 tunnel.4.type=client
@@ -72,19 +75,7 @@ tunnel.5.interface=127.0.0.1
 tunnel.5.listenPort=7660
 tunnel.5.option.tunnels.depthInbound=2
 tunnel.5.option.tunnels.numInbound=2
+tunnel.5.option.i2p.streaming.connectDelay=1000
 tunnel.5.startOnLoad=false
 tunnel.5.targetDestination=pop.postman.i2p
 tunnel.5.type=client
-
-# another irc server, linked with irc.duck.i2p and IIP
-tunnel.6.description=irc.baffled.i2p
-tunnel.6.i2cpHost=localhost
-tunnel.6.i2cpPort=7654
-tunnel.6.interface=localhost
-tunnel.6.listenPort=7661
-tunnel.6.name=irc.baffled.i2p
-tunnel.6.option.tunnels.depthInbound=2
-tunnel.6.option.tunnels.numInbound=2
-tunnel.6.startOnLoad=false
-tunnel.6.targetDestination=irc.baffled.i2p
-tunnel.6.type=client
