--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -18,3 +18,10 @@ clientApp.2.args=i2ptunnel.config
 clientApp.3.main=org.mortbay.jetty.Server
 clientApp.3.name=eepsite
 clientApp.3.args=eepsite/jetty.xml
+clientApp.3.delay=30
+
+# load a browser pointing at the web console whenever we start up
+clientApp.4.main=net.i2p.apps.systray.UrlLauncher
+clientApp.4.name=consoleBrowser
+clientApp.4.args=http://localhost:7657/
+clientApp.4.delay=5
