--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -32,6 +32,7 @@ wrapper.java.classpath.17=lib/xml-apis.jar
 wrapper.java.classpath.18=lib/jbigi.jar
 wrapper.java.classpath.19=lib/systray.jar
 wrapper.java.classpath.20=lib/systray4j.jar
+wrapper.java.classpath.21=lib/streaming.jar
 
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=.
