--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -103,6 +103,9 @@ wrapper.jvm_exit.timeout=10
 # give the OS 60s to clear all the old sockets / etc before restarting
 wrapper.restart.delay=60
 
+wrapper.ping.interval=600
+wrapper.ping.timeout=605
+
 # use the wrapper's internal timer thread.  otherwise this would 
 # force a restart of the router during daylight savings time as well
 # as any time that the OS clock changes
