*** empty log message ***
Monotone-Parent: d403cced910d042527f07e6cf5433a3d73d59582
Monotone-Revision: 857ee4cabb2e4fdcf5285c7e7be57fdfaad3c33e

Monotone-Author: mpc
Monotone-Date: 2004-12-09T14:05:22
Monotone-Branch: i2p.i2p

--- a/apps/sam/c/Makefile.mingw
+++ b/apps/sam/c/Makefile.mingw
@@ -21,9 +21,9 @@ SRCDIR = src
 # Programs
 #
 
-AR = C:\Dev-Cpp\bin\ar
-CC = C:\Dev-Cpp\bin\gcc
-RM = C:\Dev-Cpp\bin\rm
+AR = C:\MinGW\bin\ar
+CC = C:\MinGW\bin\gcc
+RM = C:\MinGW\bin\rm
 
 #
 # Flags
